--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.output {
+  height: 50px;
+  width: 40%;
+  margin: 10px;
+  font-size: 18px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  color: #333;
+  padding: 10px;
+}
+
+.inputBox {
+  height: 30px;
+  width: 40%;
+  margin: 10px;
+  font-size: 18px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  color: #333;
+  padding: 10px;
+}
+
+.button {
+  padding: 10px 20px;
+  cursor: pointer;
   color: white;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+.sendMessage {
+  background: green;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.addNewCommand {
+  margin: 10px;
+  background: lightblue;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  background: rgba(0, 0, 0, 0.8);
+  cursor: pointer;
+  transition: all 0.35s ease-in;
+}
+
+.modal-dialog {
+  position: relative;
+  max-height: 80vh;
+  min-height: 40vh;
+  width: 50%;
+  border-radius: 5px;
+  background: #fff;
+  overflow: auto;
+  cursor: default;
+}
+
+.modal-header {
+  background: #efefef;
+}
+
+.modal-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-header {
+  font-size: 1.5rem;
+  padding: 15px;
+}
+
+.close-modal {
+  cursor: pointer;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
